--- a/Bootstrap.css
+++ b/Bootstrap.css
@@ -126,12 +126,12 @@ body {
     }
 }
 
-.topnav {
+#topnav {
     overflow: hidden;
     background-color: #333;
 }
 
-.topnav a {
+#topnav a {
     float: left;
     color: #f2f2f2;
     text-align: center;
@@ -140,12 +140,12 @@ body {
     font-size: 17px;
 }
 
-.topnav a:hover {
+#topnav a:hover {
     background-color: #ddd;
     color: black;
 }
 
-.topnav a.active {
+#topnav a.active {
     background-color: #4CAF50;
     color: white;
 }
