--- a/Bootstrap.css
+++ b/Bootstrap.css
@@ -1,12 +1,11 @@
 h1 { color: #7c795d; font-family: 'Trocchi', serif; font-size: 45px; font-weight: normal; line-height: 48px; margin: 0; }
 
-.header {
+#header {
     border: 0;
     background-color: $greyo;
     padding: 0;
     margin: 0;
-    display: flex;
-    justify-content: space-between;
+
     align-items: center;
     align-self: center;
     line-height: normal;
@@ -14,7 +13,51 @@ h1 { color: #7c795d; font-family: 'Trocchi', serif; font-size: 45px; font-weight
     width: 100%;
     max-width: $maxwidth-inner-containner;
     position: relative;
-    z-index: 98;}
+    z-index: 98;
+grid-area: header;}
+
+.grid-container {
+    display: grid;
+    grid-column-gap: 50px;
+}
+
+a.button1{
+    display:inline-block;
+    padding:0.35em 1.2em;
+    border:0.1em solid #FFFFFF;
+    margin:0 0.3em 0.3em 0;
+    border-radius:0.12em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    text-align:center;
+    transition: all 0.2s;
+}
+a.button1:hover{
+    color:#000000;
+    background-color:#FFFFFF;
+}
+@media all and (max-width:30em){
+    a.button1{
+        display:block;
+        margin:0.4em auto;
+        }
+}
+
+
+#portfolio {
+word-wrap: break-word;
+flex-direction: column;
+    flex-shrink: 4;
+    justify-content: flex-start;
+    background-image: url("download.jfif");
+
+
+
+    text-align:alignment: left;
+}
 
 .button {
     background-color: red;
@@ -24,6 +67,10 @@ h1 { color: #7c795d; font-family: 'Trocchi', serif; font-size: 45px; font-weight
     flex-wrap: wrap;
 }
 
+#picture {
+align: bottom;
+margin: 10px
+
 * {
     box-sizing: border-box;
 }
@@ -31,8 +78,16 @@ h1 { color: #7c795d; font-family: 'Trocchi', serif; font-size: 45px; font-weight
 body {
     margin: 0;
     padding: 0;
+
+
 }
 
+
+.footer {
+
+}
+
+@media
 .container {
     width: 100vw;
     height: 100vh;
@@ -40,7 +95,7 @@ body {
     position: relative;
 }
 
-html{
+.html{
     height:100%;
     margin:0;
     font-size:16px;
@@ -48,111 +103,60 @@ html{
     font-weight:400;
     line-height:1.8em;
     color:#666;
-    background-image: image.jpg;
+
+}
 }
 
 body {
     background-image: url("/videotutorials/images/tutor_connect_home.jpg");
-}
 
-.pimg1, .pimg2, .pimg3{
-    position:relative;
-    opacity:0.70;
-    background-position:center;
-    background-size:cover;
-    background-repeat:no-repeat;
 
-    /*
-      fixed = parallax
-      scroll = normal
-    */
-    background-attachment:fixed;
-}
-
-.pimg1{
-    background-image:url(image.jpg);
-    min-height:100%;
-}
-
-.pimg2{
-    background-image:url('../img/image2.jpg');
-    min-height:400px;
-}
-
-.pimg3{
-    background-image:url('../img/image3.jpg');
-    min-height:400px;
-}
-
-.section{
-    text-align:center;
-    padding:50px 80px;
-}
-
-.section-light{
-    background-color:#f4f4f4;
-    color:#666;
-}
-
-.section-dark{
-    background-color:#282e34;
-    color:#ddd;
-}
-
-.ptext{
-    position:absolute;
-    top:50%;
-    width:100%;
-    text-align:center;
-    color:#000;
-    font-size:27px;
-    letter-spacing:8px;
-    text-transform:uppercase;
-}
-
-.ptext .border{
-    background-color:#111;
-    color:#fff;
-    padding:20px;
-}
-
-.ptext .border.trans{
-    background-color:transparent;
-}
-
-@media(max-width:568px){
-    .pimg1, .pimg2, .pimg3{
-        background-attachment:scroll;
-    }
 }
 
 
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
 }
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+    background-color: #4CAF50;
+    color: white;
+}
+
+#skills{
+    color: white;
+    font-family: arial;
+
+}
+
+#portfolio{
+    color:Green;
+    font-family arial;
+    text-shadow: 2px 2px #FF0000;
+    display: grid;
+    grid-template-columns: 30%, 70%;
+
+
+}
+
+.project {
+    color: white;
 }
 
 
